[gd_scene load_steps=18 format=3 uid="uid://dmjv10bhqwpjq"]

[ext_resource type="Script" uid="uid://bx4ieh4hqa48t" path="res://scenes/pauseMenu/pause_menu_test.gd" id="1_dwgcx"]
[ext_resource type="Texture2D" uid="uid://dqaehttexexqh" path="res://assets/prototype/Dark/texture_01.png" id="2_oslvo"]
[ext_resource type="Script" uid="uid://d1x4u7h3ps15v" path="res://scenes/player/scripts/player.gd" id="3_xmht3"]
[ext_resource type="PackedScene" uid="uid://ifllmt2qup1j" path="res://scenes/dummy_items/dummy_item.tscn" id="4_diamf"]
[ext_resource type="Script" uid="uid://b41j15x3dwiqt" path="res://scenes/player/scripts/head.gd" id="4_r0tqa"]
[ext_resource type="Script" uid="uid://b81ipwmbcngqb" path="res://scenes/player/scripts/interact_controller.gd" id="5_56a5w"]
[ext_resource type="PackedScene" uid="uid://b364sm28y051l" path="res://scenes/cooking/patty.tscn" id="5_r0tqa"]
[ext_resource type="PackedScene" uid="uid://coef8d8g3xjex" path="res://scenes/cooking/stove.tscn" id="6_56a5w"]
[ext_resource type="PackedScene" uid="uid://dgek5uf42pyx0" path="res://scenes/pauseMenu/pause_menu.tscn" id="7_r4s73"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8a5hx"]

[sub_resource type="Sky" id="Sky_0huwb"]
sky_material = SubResource("ProceduralSkyMaterial_8a5hx")

[sub_resource type="Environment" id="Environment_uyg78"]
background_mode = 2
sky = SubResource("Sky_0huwb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8a5hx"]
albedo_texture = ExtResource("2_oslvo")
uv1_scale = Vector3(20, 20, 20)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x7p2l"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x7p2l"]

[sub_resource type="SphereMesh" id="SphereMesh_gmlin"]

[sub_resource type="GDScript" id="GDScript_vjugs"]
script/source = "extends Area3D

enum State {RAW, COOKING, COOKED, BURNT} # states of patty
var state = State.RAW
# cooking times
var cooking_time : float = 0.0 
var max_cooking_time: float = 10.0
var burn_time: float = 20.0
# is patty on stove
var is_on_stove: bool = false
# status of print messages
var cooked_printed: bool = false
var burnt_printed: bool = false
func _ready():
	# Cache the mesh material for quick access
	print(\"Patty script ready!\")
	$MeshInstance3D.material_override = $MeshInstance3D.get_active_material(0)
	
func start_cooking (): # cooking function
	if is_on_stove: # if its on the stove already its already cooking
		return
	is_on_stove = true
	if(state == State.RAW): # check if patty is raw
		state = State.COOKING # change state of patty to cooking
		is_on_stove = true
		cooking_time = 0.0
		print (\"Patty is cooking on stove.\")
	elif state == State.COOKING or state == State.COOKED:
		print (\"Patty resume cooking\")
		
func stop_cooking (): # when the patty stops cooking
	is_on_stove = false
	print (\"Patty stopped cooking.\")
	
func _process (delta):
	if (is_on_stove): # check if its in cooking state
		cooking_time += delta # adds time passed since last frame
		
		if (cooking_time >= max_cooking_time and state != State.COOKED  and not cooked_printed) : # if the time reaches 10 seconds it is cooked
			state = State.COOKED
			_change_patty_color(Color(0.424, 0.235, 0.03, 1.0)) # turn brown
			print (\"Patty is cooked\")
			cooked_printed = true

		if cooking_time >= burn_time and state != State.BURNT and not burnt_printed: # if the time is greater than 20 seocnds the patty state is burnt
			state = State.BURNT
			_change_patty_color(Color(0.069, 0.023, 0.001, 1.0)) # turn black
			print (\"Patty is burnt\")
			burnt_printed = true
			
func _change_patty_color(new_color: Color):
	var mat = $MeshInstance3D.get_active_material(0)
	if mat:
		mat.albedo_color = new_color
"

[node name="PauseMenuTest" type="Node3D"]
script = ExtResource("1_dwgcx")

[node name="CookingWorld" type="Node3D" parent="."]

[node name="TestWorld" type="Node3D" parent="CookingWorld"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CookingWorld/TestWorld"]
environment = SubResource("Environment_uyg78")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CookingWorld/TestWorld"]
transform = Transform3D(1, 0, 0, 0, 0.7875807, 0.6162115, 0, -0.6162115, 0.7875807, 0, 1.9818738, 0)
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="CookingWorld/TestWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.031198978, -0.3348794, -0.21556234)
use_collision = true
collision_layer = 2
size = Vector3(39.45375, 0.29052734, 48.29338)
material = SubResource("StandardMaterial3D_8a5hx")

[node name="Player" type="CharacterBody3D" parent="CookingWorld/TestWorld"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20424843, 0.7905276, -0.32461023)
collision_mask = 2
script = ExtResource("3_xmht3")
speed = 10.0
jump_power = 8.0
gravity = 20.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CookingWorld/TestWorld/Player"]
shape = SubResource("CylinderShape3D_x7p2l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CookingWorld/TestWorld/Player"]
mesh = SubResource("CapsuleMesh_x7p2l")

[node name="head" type="Node3D" parent="CookingWorld/TestWorld/Player" node_paths=PackedStringArray("camera")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57272524, 0)
script = ExtResource("4_r0tqa")
camera = NodePath("Camera3D")

[node name="Camera3D" type="Camera3D" parent="CookingWorld/TestWorld/Player/head"]

[node name="InteractRaycast" type="RayCast3D" parent="CookingWorld/TestWorld/Player/head/Camera3D"]
target_position = Vector3(0, 0, -5)
collision_mask = 14
collide_with_areas = true

[node name="ItemHolder" type="Node3D" parent="CookingWorld/TestWorld/Player/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42254293, -0.17254883, -0.55524206)

[node name="InteractController" type="Node" parent="CookingWorld/TestWorld/Player" node_paths=PackedStringArray("raycast", "itemHolder")]
script = ExtResource("5_56a5w")
raycast = NodePath("../head/Camera3D/InteractRaycast")
itemHolder = NodePath("../head/ItemHolder")

[node name="tempCrosshair" type="Control" parent="CookingWorld/TestWorld/Player"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MeshInstance2D" type="MeshInstance2D" parent="CookingWorld/TestWorld/Player/tempCrosshair"]
scale = Vector2(10, 10)
mesh = SubResource("SphereMesh_gmlin")

[node name="DummyItem" parent="CookingWorld/TestWorld" instance=ExtResource("4_diamf")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 3.5246434, -0.07216641, -5.3740287)

[node name="Patty" parent="CookingWorld/TestWorld" instance=ExtResource("5_r0tqa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.323677, 0.213934, -0.031141758)
script = SubResource("GDScript_vjugs")

[node name="Stove" parent="CookingWorld/TestWorld" instance=ExtResource("6_56a5w")]
transform = Transform3D(0.33, 0, 0, 0, 0.33, 0, 0, 0, 0.33, 2.5762794, 0, 0)

[node name="PauseMenu" parent="CookingWorld/TestWorld" instance=ExtResource("7_r4s73")]
visible = false
offset_left = 412.0
offset_top = 241.0
offset_right = 6.5441895
offset_bottom = 30.329712
scale = Vector2(0.5416869, 0.58692896)
